Archive2/a2/521bdcf4bd8e56/output
main.cpp:6:56: error: storage class specified for 'operator='
     extern void operator=(const IDataStream& dataStream)
                                                        ^
